# word-matching-search-engine

./: .gitignore  CMakeLists.txt  README.md
include/: library.h  public.h
src/: delete_comment_and_testfunction  delete_comment_and_testfunction.c  library.c  main.c  original_search.c
