cmake_minimum_required(VERSION 3.13)
project(YAOQIN C)

set(CMAKE_C_STANDARD 11)

SET(CMAKE_C_COMPTLER GCC)
set(CMAKE_BUILD_TYPE Debug)
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/include)
aux_source_directory(${PROJECT_SOURCE_DIR}/src SRC_LIST)
SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)
ADD_EXECUTABLE(YAOQIN ${SRC_LIST})
TARGET_LINK_LIBRARIES(YAOQIN  ${NETSIM_LIB})
